2000-07-26  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): New variables.
	(libintl.la): Use them.

	* Makefile.in (install-exec, install-data, uninstall): Provide DESTDIR
	support, as recommended by GNU standards. Fix misapplied 2000-06-16
	patch.

2000-06-16  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (COMSRCS): Add localcharset.c.
	(OBJECTS): Add localcharset.$lo.
	(DISTFILES.common): Add config.charset, ref-{add,del}.sin.
	(DEFS): Add -DLIBDIR.
	(all-yes): Add charset.alias, ref-{add,del}.sed.
	(.SUFFIXES): Add .sin and .sed.
	(.sin.sed, charset.alias): New rules.
	(install-exec, uninstall): Install/deinstall charset.alias.
	* localcharset.c: New file, from fileutils-4.0u.
	* config.charset: New file, from fileutils-4.0u.
	* red-add.sin, ref-del.sin: New files, from fileutils-4.0u.

	* intlh.inst.in (bind_textdomain_codeset): New declaration.
	* libgettext.h (bind_textdomain_codeset, bind_textdomain_codeset__):
	New declarations.
	(bind_textdomain_codeset) [!ENABLE_NLS]: New macro.
	* cat-compat.c (bind_textdomain_codeset): New function.
	* intl-compat.c (bind_textdomain_codeset): New function.

	* libgettext.h (ngettext, dngettext, dcngettext): New
	declarations.
	(dcgettext): Remove macro definition.
	(textdomain, bindtextdomain) [!ENABLE_NLS]: Parenthesize argument.
	* intlh.inst.in (ngettext, dngettext, dcngettext): New
	declarations.
	(dcgettext): Remove macro definition.

	* *.h, *.c, *.y: Change copyright notice from LGPL to GPL.

2000-05-21  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c: Fix typo in comment.

2000-05-08  Andreas Jaeger  <aj@suse.de>

	* bindtextdom.c (set_binding_values): Add prototype.

2000-05-06  Bruno Haible  <haible@clisp.cons.org>

	* tst-gettext.c (main): Disable possibly existing LC_CTYPE and
	OUTPUT_CHARSET environment variables.

2000-05-05  Bruno Haible  <haible@clisp.cons.org>

	* dcigettext.c (alignof): New macro.